projeto 004 tá concluído

--- a/projeto004/index.html
+++ b/projeto004/index.html
@@ -10,22 +10,34 @@
 <body>
     <ul>
         <li class="feito">
-          <a href="../projeto001">projeto 001</a>
+         <a href="../projeto001">projeto 001</a>
         </li>
         <li class="feito">
-        <a href="../projeto002">projeto 002</a>
+         <a href="../projeto002">projeto 002</a>
         </li>
         <li class="feito">
-        <a href="../projeto003">projeto 003</a>
+         <a href="../projeto003">projeto 003</a>
         </li>
         <li class="feito">
-        <a href="../projeto004">projeto 004</a>
+         <a href="../projeto004">projeto 004</a>
         </li>
         <li class="feito">
-        <a href="../projeto005">projeto 005</a>
+         <a href="../projeto005">projeto 005</a>
         </li>
         <li class="feito">
-        <a href="../projeto006">projeto 006</a>
+         <a href="../projeto006">projeto 006</a>
+        </li>
+        <li class="feito">
+         <a href="../projeto007">projeto 007</a>
+        </li>
+        <li class="">
+         <a href="../projeto008">projeto 008</a>
+        </li>
+        <li class="">
+         <a href="../projeto009">projeto 009</a>
+        </li>
+        <li class="">
+         <a href="../projeto010">projeto 010</a>
         </li>
     </ul>
 </body>
