Concluido a primeira fase

--- a/projeto004/index.html
+++ b/projeto004/index.html
@@ -30,13 +30,13 @@
         <li class="feito">
          <a href="../projeto007">projeto 007</a>
         </li>
-        <li class="">
+        <li class="feito">
          <a href="../projeto008">projeto 008</a>
         </li>
-        <li class="">
+        <li class="feito">
          <a href="../projeto009">projeto 009</a>
         </li>
-        <li class="">
+        <li class="feito">
          <a href="../projeto010">projeto 010</a>
         </li>
     </ul>
